--- a/last2weeks/lambdaCSS.css
+++ b/last2weeks/lambdaCSS.css
@@ -203,10 +203,10 @@ hr{
 #info-box {
     /*height: auto; */
     overflow: hidden;
-    z-index: 44444444444;
+    /*z-index: 2;*/
     position: relative;
     text-rendering: optimizeSpeed;
-    padding-left:15px;
+    /*padding-left:15px;*/
     color:black;
     background-color:#f4f4f4;
     color: black;
@@ -264,18 +264,34 @@ hr{
     -webkit-box-shadow: 0px 18px 43px -9px rgba(255,51,0,0.7);
     -moz-box-shadow: 0px 18px 43px -9px rgba(255,51,0,0.7);
     box-shadow: 0px 18px 43px -9px rgba(255,51,0,0.7);
-    z-index: 99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999;
+    z-index: 1;
 }
 
 /**********************
 3-1. LIBRARY TREE
 ***********************/
 
+
+.affix {
+    top: 0;
+    width: 100%;
+    z-index: 10;
+    transition: top 0.3s ease-in-out;
+}
+
+
+.affix-up {
+    top: -40px;
+}
+
 #library-tree{
+    z-index: 10;
+    width: 100%;
     background-color: #f30;
     color: white;
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-right: 0;
+    margin-left: 0;
+    /*margin-left: -15px;*/
     height: 40px;
     -webkit-box-shadow: 0px 10px 32px -9px rgba(0,0,0,0.59);
     -moz-box-shadow: 0px 10px 32px -9px rgba(0,0,0,0.59);
@@ -828,7 +844,7 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     padding: 0;
     height: 100%;
     position:fixed;
-    z-index: 999999999999999999999999;
+    z-index: 0;
     max-width: 100%;
     background-attachment: fixed;   
     left: 0;
@@ -871,7 +887,7 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     font-size: 18px;
     color: white;
     vertical-align: middle;
-    z-index: 99999999999999999999999999999999;
+    z-index: 0;
     right: -4%;
     position: absolute;
     border-left: 0px solid black;
@@ -902,7 +918,7 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     position: absolute;
     font-size: 15px;
     text-overflow: ellipsis;
-    z-index: 99999999999999999999999999999999;
+    z-index: 0;
     /* font-style: italic; */
     font-family: "HKGroteskbold";
     /* text-transform: uppercase; */
@@ -927,7 +943,7 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
 
 .toggle_menu_left_button div{
     width: 50%;
-    z-index: 99999999999999999999999999999999;
+    z-index: 0;
 
 
 }
@@ -941,7 +957,7 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     font-size: 18px;
     color: white;
     vertical-align: middle;
-    z-index: 99999999999999999999999999999999;
+    z-index: 0;
     height: 100%;
     left: -24%;
     position: absolute;
@@ -1149,19 +1165,19 @@ Table of content is contained in pushmenu, it shows the different parts of the b
     height:300px;
 }
 
-
-#tool-bar-container{
+/*WHAT IS THIS?*/
+/*#tool-bar-container{
     position: fixed;
     top:0px;
     left:0px;
     width: 80%;
-    /*  -webkit-box-shadow: 9px -3px 20px 23px rgba(255,255,255,1);
+      -webkit-box-shadow: 9px -3px 20px 23px rgba(255,255,255,1);
     -moz-box-shadow: 9px -3px 20px 23px rgba(255,255,255,1);
-    box-shadow: 9px -3px 20px 23px rgba(255,255,255,1);  */
+    box-shadow: 9px -3px 20px 23px rgba(255,255,255,1);  
     background-color: white;
     height: 1px;
-    z-index:99;
-}
+    z-index:1;
+}*/
 
 #search-button, #files-button, #copy-button, #print-button, #tools-button, #share-button{
     padding:0px;
@@ -1224,7 +1240,7 @@ Table of content is contained in pushmenu, it shows the different parts of the b
     box-shadow: 10px 10px 5px -4px rgba(0,0,0,0.18);
     position:fixed;
     top:40px; 
-    z-index:99;
+    z-index:1;
     height: auto;
     border-radius: 5px;
     display: none;
@@ -1239,7 +1255,7 @@ Table of content is contained in pushmenu, it shows the different parts of the b
     width: 200px;
     position:fixed;
     top:20px; 
-    z-index:99;
+    z-index:1;
     height: auto;
     border-radius: 5px;
     display: none;
@@ -1297,11 +1313,11 @@ Table of content is contained in pushmenu, it shows the different parts of the b
     margin-right: 2px;
     text-align: center;
     width: 15px;
-    z-index:99;}
+    z-index:1;}
 
 .toggle-box:checked + label:before {
     content: "\2212";
-    z-index:99;
+    z-index:1;
 }
 
 
@@ -1409,7 +1425,7 @@ Table of content is contained in pushmenu, it shows the different parts of the b
 #arrows #up {
     position: fixed;
     top: 44%;
-    z-index: 99;
+    z-index: 1;
     font-size: 20px;
     border-radius: 4px;
     background-color: #f4f4f4;
@@ -1420,7 +1436,7 @@ Table of content is contained in pushmenu, it shows the different parts of the b
 #arrows #down {
     position: fixed;
     top: 50%;
-    z-index: 99;
+    z-index: 1;
     font-size: 20px;
     border-radius: 4px;
     background-color: #f4f4f4;
@@ -1528,7 +1544,7 @@ fieldset {
     text-align: right;
     position: fixed;
     color: #8e8e8E;
-    z-index: 99;
+    z-index: 1;
 }
 
 #filter.text-input {
@@ -1634,7 +1650,7 @@ background: radial-gradient(10px, white, white, #c7c7c7); /* Standard syntax (mu
     position: fixed;
     padding-top: 2px;
     -webkit-padding-start: 0px;
-    z-index: 99;
+    z-index: 1;
 }
 
 .ui-menu-item {
@@ -1644,7 +1660,7 @@ background: radial-gradient(10px, white, white, #c7c7c7); /* Standard syntax (mu
     -moz-box-shadow: 0 10px 15px rgba(0,0,0,0.2);
     box-shadow: 0 10px 15px rgba(0,0,0,0.2);
     padding-left:3px;
-    z-index: 99;
+    z-index: 1;
 
 }
 
@@ -1805,7 +1821,7 @@ color: #0000ff;
     font-size: 10px;
     color: rgb(63, 222, 63);
     cursor: move;
-    z-index: 999999999999999999999999;
+    z-index: 1;
     padding-left:4px;
 }
 
@@ -2233,7 +2249,7 @@ ol {
     border: none;
     background-color: white;
     font-family: "HKGrotesk";
-    z-index: 9999999999999999999999999999;
+    z-index: 0;
 }
 
 #menu-right .panel-group, #menu-right .panel-group:hover, #menu-right .panel-group:focus, #menu-right .panel-group:active{
@@ -2333,7 +2349,7 @@ ol {
     padding: 0; 
     -webkit-filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.3));
     filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.3)); 
-    z-index:9999999999999999999;
+    z-index:1;
 }
 
 .btn-group-vertical .btn-primary {
@@ -2389,7 +2405,7 @@ ol {
     padding: 0; 
     -webkit-filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.3));
     filter: drop-shadow(2px 2px 10px rgba(0,0,0,0.3)); 
-    z-index:9999999999999999999;  
+    z-index:1;  
     padding: 4px;
 }
 
@@ -2490,7 +2506,7 @@ blockquote p{
 
 #par_numbr{
     height: auto;
-    z-index: 0;
+    z-index: 1;
 }
 
 .p_number{
@@ -2513,7 +2529,6 @@ blockquote p{
     position: fixed;
     z-index: 99;
     bottom:0px;
-    z-index: 99999999999999999999999999999;
     padding: 0px;
 
 }
