--- a/last2weeks/lambdaCSS.css
+++ b/last2weeks/lambdaCSS.css
@@ -163,24 +163,26 @@ hr{
 3-1. CAROUSEL
 ***********************/
 #carousel-box{
-    background-color: #FFE5DE;
+    background-color:#fff;
+    border: 0px solid #dbdbdb;
+
 }
 .well {
     min-height: 20px;
     padding: 0px;
     padding-right: 15px;
     margin-bottom: 20px;
-    background-color: #FFE5DE;
-    border: 0px solid #dbdbdb;
+    background-color:#fff;
     border-radius: 4px;
     -webkit-box-shadow: none;
     box-shadow: none;
+    border: 0px solid #dbdbdb;
+
 }
 
 .carousel-content{
-/*     padding: 20px;
-    bsackground-color: #ffffff; */
-    background-color: #ffefeb;
+    background-color:#fff;
+    border: 0px solid #dbdbdb;
 
 }
 
@@ -193,8 +195,7 @@ hr{
     margin-bottom: 0px;
     border: 0px solid #dbdbdb;
     align-self:auto;
-/*     background-color: #f4f4f4;
-     */}
+}
 
 /**********************
 3-1. INFO BOX
@@ -203,8 +204,8 @@ hr{
 #info-box {
     /*height: auto; */
     overflow: hidden;
-    /*z-index: 2;*/
-    position: relative;
+    /*     z-index: 2;
+     */    position: relative;
     text-rendering: optimizeSpeed;
     padding-left:15px;
     background-color:#f4f4f4;
@@ -284,16 +285,16 @@ hr{
 }
 
 #library-tree{
-    z-index: 10;
+    z-index: 20;
     width: 100%;
     background-color: #f30;
     color: #ffffff;
     margin-right: 0;
     margin-left: 0;
     height: 40px;
-    -webkit-box-shadow: 0px 10px 32px -9px rgba(0,0,0,0.59);
-    -moz-box-shadow: 0px 10px 32px -9px rgba(0,0,0,0.59);
-    box-shadow: 0px 10px 32px -9px rgba(0,0,0,0.59);
+    -webkit-box-shadow: 0px 10px 32px -9px rgba(0,0,0,0.29) ;
+        -moz-box-shadow: 0px 10px 32px -9px rgba(0,0,0,0.29); 
+        box-shadow: 0px 10px 32px -9px rgba(0,0,0,0.29) ;
 }
 
 #library-tree #breadcrumb{
@@ -321,6 +322,10 @@ hr{
     margin: 0px;
     padding: 0px;
     color: #ffffff;
+}
+
+#info-box .breadcrumb a{
+    color: #ffffff !important;
 }
 
 .breadcrumb>li+li:before {
@@ -782,9 +787,9 @@ a {
     width: 100%;
     background-color: rgba(255, 51, 0, 0.13);
     border-radius: 5px;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-    border-left:2px solid #f30;
+    /* border-top-left-radius: 0px; */
+    /* border-bottom-left-radius: 0px; */
+    /* border-left: 2px solid #f30; */
 }
 
 .horizScroll, .subScroll{
@@ -880,7 +885,7 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
 }
 
 #menu-right-wrapper {
-    padding-top: 8%;
+    padding-top: 45px;
     padding-left:5%;
     padding-right: 5%;
 }
@@ -958,7 +963,7 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     font-size: 18px;
     color: #ffffff;
     vertical-align: middle;
-    z-index: 0;
+    z-index: 1;
     height: 100%;
     left: -24%;
     position: absolute;
@@ -990,6 +995,8 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
 #menu-right-close{
     margin-top: -10px;
     margin-left: -30px;
+    position: absolute;
+    top:50%;
 }
 
 #menu-right-close:hover{
@@ -997,6 +1004,17 @@ a.page-scroll:hover, a.page-scroll:active, a.page-scroll:link, a.page-scroll:vis
     cursor: pointer;
 }
 
+#menu-left-close{
+    float: right;
+    position: fixed;
+    left: 15.5%;
+    top: 50%;
+}
+
+#menu-left-close:hover{
+    opacity: 0.5;
+    cursor: pointer;
+}
 
 .menu-publication-title{
     padding-top: 8%;
@@ -1053,10 +1071,9 @@ Table of content is contained in pushmenu, it shows the different parts of the b
 }
 
 #menu_bar:hover{
-    background-color:#ffffff;
-    -webkit-box-shadow: 9px 0px 13px -8px rgba(0,0,0,0.29);
+/*     -webkit-box-shadow: 9px 0px 13px -8px rgba(0,0,0,0.29);
     -moz-box-shadow: 9px 0px 13px -8px rgba(0,0,0,0.29);
-    box-shadow: 9px 0px 13px -8px rgba(0,0,0,0.29);
+    box-shadow: 9px 0px 13px -8px rgba(0,0,0,0.29); */
 }
 
 
@@ -1409,7 +1426,7 @@ Table of content is contained in pushmenu, it shows the different parts of the b
 #arrows #up {
     position: fixed;
     top: 44%;
-    z-index: 1;
+    z-index: 0;
     font-size: 20px;
     border-radius: 4px;
     background-color: #f4f4f4;
@@ -1420,7 +1437,7 @@ Table of content is contained in pushmenu, it shows the different parts of the b
 #arrows #down {
     position: fixed;
     top: 50%;
-    z-index: 1;
+    z-index: 0;
     font-size: 20px;
     border-radius: 4px;
     background-color: #f4f4f4;
@@ -1529,6 +1546,7 @@ fieldset {
     position: fixed;
     color: #8e8e8E;
     z-index: 1;
+    margin-top: -20px;
 }
 
 #filter.text-input {
@@ -1640,9 +1658,10 @@ background: radial-gradient(10px, white, white, #c7c7c7); /* Standard syntax (mu
 .ui-menu-item {
     background-color: #ffffff;
     cursor: pointer;
-    -webkit-box-shadow: 0 10px 15px rgba(0,0,0,0.2);
+/*     -webkit-box-shadow: 0 10px 15px rgba(0,0,0,0.2);
     -moz-box-shadow: 0 10px 15px rgba(0,0,0,0.2);
-    box-shadow: 0 10px 15px rgba(0,0,0,0.2);
+    box-shadow: 0 10px 15px rgba(0,0,0,0.2); */
+    border:1px solid #f4f4f4;
     padding-left:3px;
     z-index: 1;
 
